<resources>
    <string name="app_name">CalendarApp</string>
    <string name="calendar_view">Calendar View</string>
    <string name="daily">Daily</string>
    <string name ="view">View</string>
    <string name = "daily_view">Daily View</string>
    <string name="add">add</string>
    <string name="submit">Submit</string>
    <string name="add_event">Add event</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="dv">dv</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_description">Enter description</string>
    <string name="select_time">Select time</string>
    <string name="select_date">Select date</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="title_of_the_event">Title of the event...</string>
    <string name="description_of_event">Description of event...</string>
    <string name="hours">Hours:</string>
    <string name="minutes">Minutes:</string>
    <string name="calendar">Calendar</string>
    <string name="please_select_your_date">Please select your date:</string>
    <string name="selected_date_is">Selected date is:</string>
    <string name="invalid_event_name_data_or_hour">Invalid event name or date</string>
    <string name="please_select_a_valid_date">Please select a valid date</string>
    <string name="act_hours">hours</string>
    <string name="empty_not_saved">Value empty not saved</string>
    <string name="pick_time">pick time</string>
    <string name="textview">TextView</string>
    <string name="no_time">no time</string>
    <string name="no_date">no date</string>
    <string name="snooze">Snooze</string>
    <string name="flashlight">Flashlight</string>
    <string name="_90_charging">90% Charging</string>
</resources>