<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEventActivity">

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="90dp"
        android:background="@drawable/ic_cancel"
        app:layout_constraintEnd_toStartOf="@+id/buttonSubmit"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/ic_check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonBack"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewEventTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="105dp"
        android:layout_marginBottom="51dp"
        android:text="@string/enter_title"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewEventDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewEventDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="50dp"
        android:text="@string/enter_description"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEventTitle" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="324dp"
        android:text="@string/select_time"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewEventDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="47dp"
        android:text="@string/select_date"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textViewAddEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="47dp"
        android:text="@string/add_event"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonSubmit"
        app:layout_constraintStart_toEndOf="@+id/buttonBack"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="22dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/title_of_the_event"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewEventTitle"
        app:layout_constraintTop_toBottomOf="@+id/buttonSubmit" />

    <EditText
        android:id="@+id/editTextEventDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="22dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/description_of_event"
        android:inputType="textPersonName"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewEventDescription"
        app:layout_constraintTop_toBottomOf="@+id/editTextEventName" />

    <TextView
        android:id="@+id/textViewTimePicked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="79dp"
        android:layout_marginTop="101dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="50dp"
        android:text="@string/no_time"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewDatePicked"
        app:layout_constraintEnd_toStartOf="@+id/buttonPickTime"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/editTextEventDescription" />

    <Button
        android:id="@+id/buttonPickTime"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/ic_alarm"
        app:layout_constraintBottom_toTopOf="@+id/buttonPickDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEventDescription" />

    <TextView
        android:id="@+id/textViewDatePicked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="40dp"
        android:text="@string/no_date"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonPickDate"
        app:layout_constraintStart_toEndOf="@+id/textViewEventDate"
        app:layout_constraintTop_toBottomOf="@+id/textViewTimePicked" />

    <Button
        android:id="@+id/buttonPickDate"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="21dp"
        android:background="@drawable/ic_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPickTime" />

</androidx.constraintlayout.widget.ConstraintLayout>