<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <CalendarView
        android:id="@+id/calendarDailyView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="194dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonAddEvent"
        android:layout_width="83dp"
        android:layout_height="0dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="14dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonDailyView"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonDailyView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="90dp"
        android:text="@string/dv"
        app:layout_constraintEnd_toStartOf="@+id/buttonAddEvent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewCalendarView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="47dp"
        android:text="@string/calendar_view"
        app:layout_constraintEnd_toStartOf="@+id/buttonAddEvent"
        app:layout_constraintStart_toEndOf="@+id/buttonDailyView"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>